@@ -70,4 +70,8 @@
     <adapter factory=".buttons.UserButton" name="user-mobile-button" />
     <adapter factory=".buttons.NavigationButton" name="navigation-mobile-button" />
 
+    <configure zcml:condition="installed plone.app.multilingual">
+        <adapter factory=".buttons_multilingual.MultilanguageButton" name="multilanguage-mobile-button" />
+    </configure>
+
 </configure>
